0.5.4
-----
1. When browsing Genres -> Classical, allow user to list composers, conductors,
   artists, or albums.
2. When browsing Genres -> Jazz, allow user to list composers, artists, or
   albums.
3. Add jumplist support to playlists listing.
4. Context menu for dynamic playlists.
5. Assign unique ID to play/pause and info buttons in mobile toolbar - seems
   like vue gets confused when these are switched with no ID?
6. Fix middle-click also firing left-click event when widget has a longpress
   handler.
7. When current track's cover changes, update it's 'key' so that vue is forced
   to refresh.
8. Attempt to detect when computer has been asleep, and refresh status when
   awoken.
9. Scroll to current queue item when change to queue page if current was
   changed whilst on other view.

0.5.3
-----
 1. Add mouse-wheel control of volume.
 2. Revert change for auto-layout on mobile browsers - seems broken on iPad.
 3. Minify all CSS.
 4. Mark some event handlers as passive, to silence chrome warnings.
 5. Add mute/unmute to volume dialog.
 6. Use middle-click to mute/unmute and to show sleep settings, in addtion to
    long press.
 7. Use v-progress-linear for time progress display.
 8. Always pass library_id to browse commmands.
 9. Fix A..Z groups for AlbumArtists, etc.
10. Add 'Reconnect' button to connection lost dialog.

0.5.2
-----
1. Fix starting chrome media session.
2. If now-playing timer is 2 seconds or more past duration, refresh status.
3. Refresh player status when app gets focus on mobile.
4. If library_id is set, then pass down to all subsequent list commands.
5. Fix update detection when rename favourite.
6. If list is cancellable, reset token after call.
7. Improve queue performance with many (e.g. 500) items.

0.5.1
-----
 1. Better display of time in now-playing.
 2. Fix updating time in now-playing.
 3. Fix favourites update handling, due to error with logging.
 4. Tweak mobile now-playing progressbar position.
 5. Use dialog to set sleep.